--- a/package.json
+++ b/package.json
@@ -1,81 +1,92 @@
 {
-  "name": "@ckeditor/ckeditor5-react",
-  "version": "1.1.3",
-  "main": "dist/ckeditor.js",
-  "description": "Official React component for CKEditor 5 – the best browser-based rich text editor.",
-  "keywords": [
-    "wysiwyg",
-    "rich text",
-    "editor",
-    "html",
-    "contentEditable",
-    "editing",
-    "react",
-    "react-component",
-    "ckeditor",
-    "ckeditor5",
-    "ckeditor 5"
-  ],
-  "dependencies": {
-    "prop-types": "^15.6.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "@ckeditor/ckeditor5-build-classic": "^12.0.0",
-    "@ckeditor/ckeditor5-dev-env": "^13.0.2",
-    "@ckeditor/ckeditor5-dev-utils": "^11.0.1",
-    "babel-loader": "^8.0.5",
-    "chai": "^4.1.2",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "karma": "^4.0.0",
-    "karma-browserstack-launcher": "^1.3.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-coveralls": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.1",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.4",
-    "karma-sinon": "^1.0.5",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.0",
-    "minimist": "^1.2.0",
-    "mocha": "^5.2.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "sinon": "^7.2.3",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.16.0",
-    "webpack-cli": "^3.1.0"
-  },
-  "peerDependencies": {
-    "react": "^16.0.0"
-  },
-  "engines": {
-    "node": ">=8.0.0",
-    "npm": ">=5.7.1"
-  },
-  "scripts": {
-    "build": "webpack --mode production",
-    "develop": "webpack --mode development --watch",
-    "changelog": "node ./scripts/changelog.js",
-    "prerelease": "npm run build",
-    "release": "node ./scripts/release.js",
-    "test": "node ./scripts/test.js",
-    "coverage": "node ./scripts/test.js --coverage"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ckeditor/ckeditor5-react.git"
-  },
-  "author": "CKSource (http://cksource.com/)",
-  "license": "GPL-2.0-or-later",
-  "bugs": {
-    "url": "https://github.com/ckeditor/ckeditor5-react/issues"
-  },
-  "homepage": "https://github.com/ckeditor/ckeditor5-react"
+	"name": "@ckeditor/ckeditor5-react",
+	"version": "1.1.3",
+	"main": "dist/ckeditor.js",
+	"description": "Official React component for CKEditor 5 – the best browser-based rich text editor.",
+	"keywords": [
+		"wysiwyg",
+		"rich text",
+		"editor",
+		"html",
+		"contentEditable",
+		"editing",
+		"react",
+		"react-component",
+		"ckeditor",
+		"ckeditor5",
+		"ckeditor 5"
+	],
+	"dependencies": {
+		"@ckeditor/ckeditor5-basic-styles": "^11.1.0",
+		"@ckeditor/ckeditor5-core": "^12.1.0",
+		"@ckeditor/ckeditor5-essentials": "^11.0.1",
+		"@ckeditor/ckeditor5-heading": "^11.0.1",
+		"@ckeditor/ckeditor5-image": "^13.0.1",
+		"@ckeditor/ckeditor5-paragraph": "^11.0.1",
+		"@ckeditor/ckeditor5-theme-lark": "^13.0.1",
+		"@ckeditor/ckeditor5-ui": "^12.1.0",
+		"prop-types": "^15.6.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.0.0",
+		"@babel/preset-env": "^7.3.1",
+		"@babel/preset-react": "^7.0.0",
+		"@ckeditor/ckeditor5-build-classic": "^12.0.0",
+		"@ckeditor/ckeditor5-dev-env": "^13.0.2",
+		"@ckeditor/ckeditor5-dev-utils": "^11.0.1",
+		"babel-loader": "^8.0.5",
+		"chai": "^4.1.2",
+		"enzyme": "^3.3.0",
+		"enzyme-adapter-react-16": "^1.1.1",
+		"istanbul-instrumenter-loader": "^3.0.0",
+		"karma": "^4.0.0",
+		"karma-browserstack-launcher": "^1.3.0",
+		"karma-chai": "^0.1.0",
+		"karma-chrome-launcher": "^2.2.0",
+		"karma-coverage": "^1.1.1",
+		"karma-coveralls": "^2.0.0",
+		"karma-firefox-launcher": "^1.0.1",
+		"karma-mocha": "^1.3.0",
+		"karma-mocha-reporter": "^2.2.4",
+		"karma-sinon": "^1.0.5",
+		"karma-sourcemap-loader": "^0.3.7",
+		"karma-webpack": "^3.0.0",
+		"minimist": "^1.2.0",
+		"mocha": "^5.2.0",
+		"postcss-loader": "^3.0.0",
+		"raw-loader": "^2.0.0",
+		"react": "^16.0.0",
+		"react-dom": "^16.0.0",
+		"sinon": "^7.2.3",
+		"style-loader": "^0.23.1",
+		"uglifyjs-webpack-plugin": "^1.2.7",
+		"webpack": "^4.16.0",
+		"webpack-cli": "^3.1.0"
+	},
+	"peerDependencies": {
+		"react": "^16.0.0"
+	},
+	"engines": {
+		"node": ">=8.0.0",
+		"npm": ">=5.7.1"
+	},
+	"scripts": {
+		"build": "webpack --mode production",
+		"develop": "webpack --mode development --watch",
+		"changelog": "node ./scripts/changelog.js",
+		"prerelease": "npm run build",
+		"release": "node ./scripts/release.js",
+		"test": "node ./scripts/test.js",
+		"coverage": "node ./scripts/test.js --coverage"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/ckeditor/ckeditor5-react.git"
+	},
+	"author": "CKSource (http://cksource.com/)",
+	"license": "GPL-2.0-or-later",
+	"bugs": {
+		"url": "https://github.com/ckeditor/ckeditor5-react/issues"
+	},
+	"homepage": "https://github.com/ckeditor/ckeditor5-react"
 }
